--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="light dark">
-  <link rel="stylesheet" href="css/pico.violet.min.css">
+  <link rel="stylesheet" href="css/pico.red.min.css">
   <link rel="stylesheet" href="css/pico.colors.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 <section class="container">
   <nav>
     <ul>
-      <li style=" padding-bottom: 0px;"><h4 class="pico-color-violet-500"  style="font-family: Special Gothic Expanded One, sans-serif;"><strong>Thilo Ahle</strong></h4></li>
+      <li style=" padding-bottom: 0px;"><h4 class="pico-color-red-500"  style="font-family: Special Gothic Expanded One, sans-serif;"><strong>Thilo Ahle</strong></h4></li>
     </ul>
     <ul>
       <li><a href="#" class="contrast">About</a></li>
