--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!doctype html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="light dark">
-  <link rel="stylesheet" href="css/pico.red.min.css">
+  <link rel="stylesheet" href="css/pico.yellow.min.css">
   <link rel="stylesheet" href="css/pico.colors.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Special+Gothic+Expanded+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Moirai+One&display=swap" rel="stylesheet">
   <title>Thilo Ahle</title>
 </head>
 <body>
 <section class="container">
   <nav>
     <ul>
-      <li style=" padding-bottom: 0px;"><h4 class="pico-color-red-500"  style="font-family: Special Gothic Expanded One, sans-serif;"><strong>Thilo Ahle</strong></h4></li>
+      <li style=" padding-bottom: 0px;"><h4 class="pico-color-yellow-100"  style="font-family: Moirai One, system-ui;"><strong>Thilo Ahle</strong></h4></li>
     </ul>
     <ul>
       <li><a href="#" class="contrast">About</a></li>
