--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </nav>
 
   <hgroup>
-    <h2>Get inspired with CSS</h2>
+    <h2>Passion for Engineering and Code</h2>
     <div class="grid">
     <div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</div>
       <div></div>
