--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </nav>
 
   <hgroup>
-    <h3>// Engineering & Coding</h3>
+    <h3 class="pico-color-yellow-50">// Engineering & Coding</h3>
     <div class="grid">
     <div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</div>
       <div></div>
