--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Moirai+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
   <title>Thilo Ahle</title>
 </head>
 <body>
@@ -17,21 +18,24 @@
     <ul>
       <li style=" padding-bottom: 0px;"><h4 class="pico-color-yellow-100"  style="font-family: Moirai One, system-ui;"><strong>Thilo Ahle</strong></h4></li>
     </ul>
-    <ul>
+    <ul style="font-family: Source Code Pro, monospace;">
       <li><a href="#" class="contrast">About</a></li>
       <li><a href="#" class="contrast">Work</a></li>
       <li><a href="#" class="contrast">Get in Touch</a></li>
     </ul>
   </nav>
-
-  <hgroup>
-    <h3 class="pico-color-yellow-50">// Engineering & Coding</h3>
+</br>
+  <hgroup style="font-family: Source Code Pro, monospace;">
+    <h3 class="pico-color-yellow-50" style="font-family: Source Code Pro, monospace;">// Engineering & Coding</h3>
     <div class="grid">
-    <div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</div>
+      <div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</div>
       <div></div>
+      <div><img src="158307788.jpeg"></div>
+
     </div>
+
   </hgroup>
-    <button>More About Me!</button>
+
     <hr>
   </article>
 
