--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ul>
       <li style=" padding-bottom: 0px;"><h4 class="pico-color-yellow-100"  style="font-family: Moirai One, system-ui;"><strong>Thilo Ahle</strong></h4></li>
     </ul>
-    <ul style="font-family: Source Code Pro, monospace;">
+    <ul style="font-family: Source Code Pro, monospace; font-size: 0.8rem;">
       <li><a href="#" class="contrast">About</a></li>
       <li><a href="#" class="contrast">Work</a></li>
       <li><a href="#" class="contrast">Get in Touch</a></li>
