--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
   <hgroup style="font-family: Source Code Pro, monospace;">
     <h3 class="pico-color-yellow-50" style="font-family: Source Code Pro, monospace;">// Engineering & Coding</h3>
     <div class="grid">
-      <div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</div>
+      <div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</br></br><button>Get in Touch!</button>
+      </div>
+
       <div></div>
-      <div><img src="158307788.jpeg"></div>
 
     </div>
 
