--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="color-scheme" content="light dark">
+  <link rel="stylesheet" href="scss/custom.scss">
   <link rel="stylesheet" href="css/pico.yellow.min.css">
   <link rel="stylesheet" href="css/pico.colors.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Moirai+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet">
   <title>Thilo Ahle</title>
 </head>
 <body>
 <section class="container">
   <nav>
     <ul>
-      <li style=" padding-bottom: 0px;"><h4 class="pico-color-yellow-100"  style="font-family: Moirai One, system-ui;"><strong>Thilo Ahle</strong></h4></li>
+      <li style=" padding-bottom: 0px;"><h4 class="pico-color-yellow-100"  style="font-family: Nabla, system-ui;"><strong>Thilo Ahle</strong></h4></li>
     </ul>
     <ul style="font-family: Source Code Pro, monospace; font-size: 0.8rem;">
       <li><a href="#" class="contrast">About</a></li>
@@ -24,6 +24,7 @@
       <li><a href="#" class="contrast">Get in Touch</a></li>
     </ul>
   </nav>
+
 </br>
   <hgroup style="font-family: Source Code Pro, monospace;">
     <h3 class="pico-color-yellow-50" style="font-family: Source Code Pro, monospace;">// Engineering & Coding</h3>
@@ -31,7 +32,13 @@
       <div>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</br></br><button>Get in Touch!</button>
       </div>
 
-      <div></div>
+      <div>
+
+        <div class="typing-slider">
+          <p>Thilo Ahle</p>
+        </div>
+
+      </div>
 
     </div>
 
@@ -44,5 +51,6 @@
 
 
 </main>
+</section>
 </body>
 </html>
