--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <link rel="stylesheet" href="css/pico.colors.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nabla&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
+
   <title>Thilo Ahle</title>
 </head>
 <body>
 <section class="container">
   <nav>
     <ul>
-      <li style=" padding-bottom: 0px;"><h4 class="pico-color-yellow-100"  style="font-family: Nabla, system-ui;"><strong>Thilo Ahle</strong></h4></li>
+      <li style=" padding-bottom: 0px;"><h4 class="pico-color-yellow-100"  style="font-family: Silkscreen, sans-serif;"><strong>Thilo Ahle</strong></h4></li>
     </ul>
     <ul style="font-family: Source Code Pro, monospace; font-size: 0.8rem;">
       <li><a href="#" class="contrast">About</a></li>
