--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <ul>
       <li style=" padding-bottom: 0px;"><h4 class="pico-color-yellow-100"  style="font-family: Silkscreen, sans-serif;"><strong>Thilo Ahle</strong></h4></li>
     </ul>
-    <ul style="font-family: Source Code Pro, monospace; font-size: 0.7rem;">
+    <ul style="font-family: Source Code Pro, monospace; font-size: 0.8rem;">
       <li><a href="#" class="contrast">About</a></li>
       <li><a href="#" class="contrast">Work</a></li>
-      <li><a href="#" class="contrast">Get in Touch</a></li>
+      <li><a href="#" class="contrast">Contact</a></li>
     </ul>
   </nav>
 
