--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <hgroup style="font-family: Source Code Pro, monospace;">
     <h4 class="pico-color-yellow-50" style="font-family: Source Code Pro, monospace;">// Engineering & Coding</h4>
     <div class="grid">
-      <div style="font-size: 0.9rem">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</br></br><button>Get in Touch!</button>
+      <div style="font-size: 0.9rem;">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</br></br><button>Get in Touch!</button>
       </div>
 
       <div>
@@ -42,6 +42,13 @@
   </hgroup>
 
     <hr>
+
+
+
+      <a href="https://www.github.com"><img src="github.svg" alt="github" style="width: 30px; height: 30px;"></a>
+       <a href="https://www.linkedin.com"><img src="linkedin.svg" alt="linkedin" style="width: 40px; height: 40px;"></a>
+  </a>
+
   </article>
 
 
